--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,10 @@
   font-size: 16px;
   cursor: pointer;
 }
+.btn:hover{
+  background-color: #1eceff;
+
+}
 .weather-container{
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   padding: 20px;
@@ -74,4 +78,10 @@
   height: 30px;
   margin: 10px;
   padding: 2px 2px 2px 10px;
+}
+*{
+  margin: 12px;
+}
+img{
+  margin: 0px;
 }
