--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,11 @@ img{
   transform: scale(0.95);
   background-color: #d6d6d6;
 }
+h2 span {
+  font-size: 0.5em;
+margin: 0px;
+}
+h2 {
+  color: #284805;
+  font-size: 4em;
+}
