--- a/src/App.css
+++ b/src/App.css
@@ -96,8 +96,8 @@ h2 span {
   font-size: 0.5em;
 margin: 0px;
 }
-h2 {
+.text-h{
   color: #02557b;
   font-size: 4em;
-    -webkit-text-stroke: 2px rgb(59, 82, 211);
+    -webkit-text-stroke: 1px rgb(15, 16, 23);
 }
