--- a/src/App.css
+++ b/src/App.css
@@ -40,9 +40,16 @@
 .read-the-docs {
   color: #888;
 } */
+ *{
+  /* margin: 0px; */
+  padding: 0px;
+ }
+ /* h1{
+  margin-top: 50px;
+ } */
 .app-container {
   max-width: 1280px;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 .btn{
@@ -78,9 +85,7 @@
   margin: 10px;
   padding: 2px 2px 2px 10px;
 }
-*{
-  margin: 12px;
-}
+
 img{
   margin: 0px;
 }
@@ -93,11 +98,12 @@ img{
   background-color: #d6d6d6;
 }
 h2 span {
-  font-size: 0.5em;
+font-size: 0.5em;
 margin: 0px;
 }
 .text-h{
   color: #02557b;
   font-size: 4em;
-    -webkit-text-stroke: 1px rgb(15, 16, 23);
+  -webkit-text-stroke: 1px rgb(15, 16, 23);
+  margin: 0;
 }
